--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>IBM Student Resources</h1>
-
-        <h2>Makhliyokhon</h2>
+        <h1>Assignments of Mahliyo </h1>
+        
         <div class="resource-box">
             <button>New Product Example: Assignment 1</button>
             <button>Assignment 2</button>
@@ -18,12 +17,7 @@
             <button>Assignment 4</button>
         </div>
 
-        <h2>Programming Resources</h2>
-        <div class="resource-box">
-            <button>Assignment 5</button>
-            <button>Assignment 6</button>
-            <button>Assignment 7</button>
-        </div>
+    
     </div>
 </body>
 </html>
